--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 .hello {
-  color: red;
+  display: block;
+  width: 200px;
+  height: 200px;
+  border: 1px solid red;
+  background: url("./card.jpg");
+  background-size: cover;
+}
+.card {
+  width: 100px;
 }
